--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,25 @@
         android:theme="@style/Theme.ToyaPedidos"
         tools:targetApi="31">
         <activity
+            android:name=".CadastraUsuarioActivity"
+            android:theme="@style/Theme.ToyaPedidos.NoActionBar"
+            android:exported="false" />
+        <activity
+            android:name=".TelaInicialActivity"
+            android:theme="@style/Theme.ToyaPedidos.NoActionBar"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".EntrarActivity"
+            android:theme="@style/Theme.ToyaPedidos.NoActionBar"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".ui.CadastraProdutoActivity"
             android:exported="false" />
         <activity
@@ -20,11 +39,6 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ToyaPedidos.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
