--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:exported="true"
             android:theme="@style/Theme.ToyaPedidos.NoActionBar" />
         <activity
-            android:name=".ui.activity.AdicionaNovoPedidoActivity"
+            android:name=".ui.activity.NovoPedidoActivity"
             android:exported="true" />
     </application>
 
