--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -16,19 +17,26 @@
         android:theme="@style/Theme.ToyaPedidos"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.CadastraEmpresaActivity"
+            android:theme="@style/Theme.ToyaPedidos.NoActionBar"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.ResumoPedidoActivity"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.activity.CadastraUsuarioActivity"
             android:exported="false"
-            android:theme="@style/Theme.ToyaPedidos.NoActionBar" >
+            android:theme="@style/Theme.ToyaPedidos.NoActionBar">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -45,29 +53,34 @@
         <activity
             android:name=".ui.activity.EntraUsuarioActivity"
             android:exported="true"
-            android:theme="@style/Theme.ToyaPedidos.NoActionBar" >
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.ToyaPedidos.NoActionBar">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.activity.CadastraProdutoActivity"
-            android:exported="false" >
+            android:screenOrientation="portrait"
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.activity.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/Theme.ToyaPedidos.NoActionBar" />
         <activity
             android:name=".ui.activity.NovoPedidoActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
